# churn-risk-scoring

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  dvc.yaml  environment.yaml  pyproject.toml  requirements.txt
api/: main.py  schemas.py
api/tests/: test_api.py
artifacts/: .gitignore  metrics.json
configs/: config.yaml
configs/dataset/: kaggle.yaml
configs/model/: lightgbm.yaml  logistic_regression.yaml  random_forest.yaml
dashboard/: app.py
data/raw/: telco_customer_churn.csv.dvc
images/: .gitignore
notebooks/: 01_eda.ipynb  02_business_analysis.ipynb
src/data/: features.py  make_dataset.py  preprocessing.py
src/models/: evaluate.py  predict.py  train.py  tune.py
src/tests/: test_preprocessing.py
