[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-risk-scoring"
version = "0.1.0"
description = "End-to-end churn risk scoring pipeline for an Australian telco operator"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]